compiler/testData/cli/jvm/fileClassAndMultifileClassClash.out
compiler/testData/cli/jvm/fileClassAndMultifileClassClash1.kt:1:1: error: duplicate JVM class name 'test/Util' generated from: package-fragment test, package-fragment test
@file:JvmName("Util")
^
compiler/testData/cli/jvm/fileClassAndMultifileClassClash2.kt:1:1: error: duplicate JVM class name 'test/Util' generated from: package-fragment test, package-fragment test
@file:JvmName("Util")
^
COMPILATION_ERROR